[gd_scene load_steps=2 format=3 uid="uid://cukihpfcauofe"]

[ext_resource type="Script" uid="uid://cra8x18q8cxvn" path="res://scripts/ui/01_menus/pause_menu.gd" id="1_crd8p"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_crd8p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.5
offset_top = -104.0
offset_right = 290.5
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="paused_text" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "We are paused."
horizontal_alignment = 1
vertical_alignment = 1

[node name="resume_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="main_menu_button" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Main Menu"

[node name="quit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
